--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html>
     <head>
+        meta name="viewport" content="width=device-width, initial-scale=1.0"
         <link rel="stylesheet" href="/stylesheets/normalize.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Questrial&display=swap">
